Sprint4.Project3:horizontal scroll was fixed

--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -11,8 +11,8 @@
   color: #ffffff;
   margin: 0 auto;
 
-  padding-top: 21%;
-  margin-bottom: 32px;
+  padding-top: 20%;
+  padding-bottom: 3%;
   position: relative;
 }
 
