--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -4,27 +4,28 @@
   grid-row-start: 2;
   grid-row-end: 5;
   width: 100%;
-  /*  width: 460px;*/
+  max-width: 460px;
   height: 460px;
 }
 
 @media screen and (max-width: 1054px) {
   .image {
-    width: 440px;
-    height: 440px;
+    max-width: 440px;
+    max-height: 440px;
   }
 }
 
 @media screen and (max-width: 770px) {
   .image {
-    width: 340px;
-    height: 340px;
+    max-width: 340px;
+    max-height: 340px;
   }
 }
 
 @media screen and (max-width: 350px) {
   .image {
-    width: 320px;
+    max-width: 320px;
     height: 320px;
+    width: 100%;
   }
 }
