--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -34,8 +34,10 @@
 @media screen and (max-width:350px){
   .place__paragraph{
     max-width: 288px;
+    
     line-height: 26px;
     font-size: 16px;
+    padding-top: 5%;
   }
 }
 
