--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -29,5 +29,7 @@
   .places {
     max-width: 320px;
     min-height: 4775px;    
+    grid-row-gap: 200px;
+    width: 100%;
   }
 }
